--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   }
   
   .tile {
-    width: 80px;
-    height: 80px;
+    width: 150px;
+    height: 150px;
     background-color: #ffffff;
     border: 2px solid #ccc;
     border-radius: 8px;
@@ -62,5 +62,14 @@ body {
   /* Hover effect */
   .tile:hover {
     border-color: #007bff;
+  }
+  
+  .pattern-img {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
